[tool.poetry]
name = "kosherguiltydiscussions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.2"
click = "^7.1.2"
dnspython = "^2.0.0"
jinja2 = "^2.11.2"
typing-extensions = "^3.7.4"
motor = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
